bitbucket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitbucket
  labels:
    app: bitbucket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitbucket
  template:
    metadata:
      labels:
        app: bitbucket
    spec:
      containers:
        - name: bitbucket
          image: atlassian/bitbucket-server
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          ports:
          - containerPort: 7990
          - containerPort: 7999
          volumeMounts:
            - mountPath: /var/atlassian/application-data/bitbucket
              name: bitbucket-data
      volumes:
        - name: bitbucket-data
          persistentVolumeClaim:
            claimName: bitbucket-pvc
