bitbucket/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bitbucket
  name: bitbucket-service
spec:
  ports:
    - name: bitbucket-http
      port: 7990
      protocol: TCP
      targetPort: 7990
    - name: bitbucket-ssh
      port: 7999
      protocol: TCP
      targetPort: 7999
  selector:
    app: bitbucket
  type: ClusterIP
