bitbucket/ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
spec:  
  rules:
  - host: bitbucket.ithub.space
    http:
      paths:
      - path: /
        backend:
          serviceName: bitbucket-service
          servicePort: 7990
  tls:
  - hosts:
    - bitbucket.ithub.space
    secretName: bitbucket-ithub-space-prod-tls
